fix wrap time

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -215,8 +215,6 @@
 
 .list-wrapper {
   height: 70px;
-  -webkit-transition: .1s;
-  transition: .1s;
   padding: 10px;
   -webkit-transition: 1s;
   transition: 1s;
@@ -241,6 +239,8 @@
 }
 
 .list-wrapper__list-container {
+  /* tutaj musi iść height takie jak ul byc  */
+  height: 100%;
   width: 100%;
   overflow: hidden;
 }
@@ -256,12 +256,12 @@
   opacity: 0;
   -webkit-transition: 1s;
   transition: 1s;
-  -webkit-transform: translateY(-200px);
-          transform: translateY(-200px);
+  -webkit-transform: translateY(-1000px);
+          transform: translateY(-1000px);
   margin-bottom: 10px;
-  overflow: hidden;
+  /* overflow: hidden; */
   height: 0px;
-  padding: 15px;
+  padding: 30px;
 }
 
 .list-wrapper__list--active {
@@ -269,7 +269,7 @@
   -webkit-transform: translateX(0);
           transform: translateX(0);
   height: auto;
-  overflow: visible;
+  /* overflow: visible; */
   /* .list-wrapper__item {
 
             height: 100px;
