--- a/styles/sass/_list-wrapper.scss
+++ b/styles/sass/_list-wrapper.scss
@@ -2,7 +2,7 @@
 
 
     height: 70px;
-    transition: .1s;
+
     padding: 10px;
     transition: 1s;
     margin: 10px;
@@ -10,7 +10,8 @@
 
 
     &__list-container {
-
+        /* tutaj musi iść height takie jak ul byc  */
+        height: 100%;
         width: 100%;
         overflow: hidden;
 
@@ -31,11 +32,11 @@
 
         opacity: 0;
         transition: 1s;
-        transform: translateY(-200px);
+        transform: translateY(-1000px);
         margin-bottom: 10px;
-        overflow: hidden;
+        /* overflow: hidden; */
         height: 0px;
-        padding: 15px;
+        padding: 30px;
 
 
 
@@ -63,7 +64,7 @@
         opacity: 1;
         transform: translateX(0);
         height: auto;
-        overflow: visible;
+        /* overflow: visible; */
 
         /* .list-wrapper__item {
 
